--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,64 +52,52 @@
 	 <color name="md_grey_300">#E0E0E0</color>
 	 <!--    MD 3-->
 
-    <color name="seed">#AE2D3D</color>
-    <color name="md_theme_light_primary">#AE2D3D</color>
-    <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#FFDADA</color>
-    <color name="md_theme_light_onPrimaryContainer">#40000B</color>
-    <color name="md_theme_light_secondary">#9C4049</color>
-    <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#FFDADA</color>
-    <color name="md_theme_light_onSecondaryContainer">#40000C</color>
-    <color name="md_theme_light_tertiary">#9C4049</color>
-    <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#FFDADA</color>
-    <color name="md_theme_light_onTertiaryContainer">#40000C</color>
-    <color name="md_theme_light_error">#BA1A1A</color>
-    <color name="md_theme_light_errorContainer">#FFDAD6</color>
-    <color name="md_theme_light_onError">#FFFFFF</color>
-    <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FFFBFF</color>
-    <color name="md_theme_light_onBackground">#201A1A</color>
-    <color name="md_theme_light_surface">#FFFBFF</color>
-    <color name="md_theme_light_onSurface">#201A1A</color>
-    <color name="md_theme_light_surfaceVariant">#F4DDDD</color>
-    <color name="md_theme_light_onSurfaceVariant">#524343</color>
-    <color name="md_theme_light_outline">#857373</color>
-    <color name="md_theme_light_inverseOnSurface">#FBEEED</color>
-    <color name="md_theme_light_inverseSurface">#362F2F</color>
-    <color name="md_theme_light_inversePrimary">#FFB3B4</color>
-    <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#AE2D3D</color>
-    <color name="md_theme_light_surfaceTintColor">#AE2D3D</color>
-    <color name="md_theme_dark_primary">#FFB3B4</color>
-    <color name="md_theme_dark_onPrimary">#680017</color>
-    <color name="md_theme_dark_primaryContainer">#8D1228</color>
-    <color name="md_theme_dark_onPrimaryContainer">#FFDADA</color>
-    <color name="md_theme_dark_secondary">#FFB3B5</color>
-    <color name="md_theme_dark_onSecondary">#5F121E</color>
-    <color name="md_theme_dark_secondaryContainer">#7D2933</color>
-    <color name="md_theme_dark_onSecondaryContainer">#FFDADA</color>
-    <color name="md_theme_dark_tertiary">#FFB3B5</color>
-    <color name="md_theme_dark_onTertiary">#5F121E</color>
-    <color name="md_theme_dark_tertiaryContainer">#7D2933</color>
-    <color name="md_theme_dark_onTertiaryContainer">#FFDADA</color>
-    <color name="md_theme_dark_error">#FFB4AB</color>
-    <color name="md_theme_dark_errorContainer">#93000A</color>
-    <color name="md_theme_dark_onError">#690005</color>
-    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#201A1A</color>
-    <color name="md_theme_dark_onBackground">#ECE0DF</color>
-    <color name="md_theme_dark_surface">#201A1A</color>
-    <color name="md_theme_dark_onSurface">#ECE0DF</color>
-    <color name="md_theme_dark_surfaceVariant">#524343</color>
-    <color name="md_theme_dark_onSurfaceVariant">#D7C1C1</color>
-    <color name="md_theme_dark_outline">#9F8C8C</color>
-    <color name="md_theme_dark_inverseOnSurface">#201A1A</color>
-    <color name="md_theme_dark_inverseSurface">#ECE0DF</color>
-    <color name="md_theme_dark_inversePrimary">#AE2D3D</color>
-    <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#FFB3B4</color>
-    <color name="md_theme_dark_surfaceTintColor">#FFB3B4</color>
+    <color name="md_theme_primary">#8F4A4D</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#FFDADA</color>
+    <color name="md_theme_onPrimaryContainer">#3B080E</color>
+    <color name="md_theme_secondary">#765657</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#FFDADA</color>
+    <color name="md_theme_onSecondaryContainer">#2C1516</color>
+    <color name="md_theme_tertiary">#755A2F</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#FFDDB0</color>
+    <color name="md_theme_onTertiaryContainer">#281800</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_background">#FFF8F7</color>
+    <color name="md_theme_onBackground">#221919</color>
+    <color name="md_theme_surface">#FFF8F7</color>
+    <color name="md_theme_onSurface">#221919</color>
+    <color name="md_theme_surfaceVariant">#F4DDDD</color>
+    <color name="md_theme_onSurfaceVariant">#524343</color>
+    <color name="md_theme_outline">#857373</color>
+    <color name="md_theme_outlineVariant">#D7C1C1</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#382E2E</color>
+    <color name="md_theme_inverseOnSurface">#FFEDEC</color>
+    <color name="md_theme_inversePrimary">#FFB3B4</color>
+    <color name="md_theme_primaryFixed">#FFDADA</color>
+    <color name="md_theme_onPrimaryFixed">#3B080E</color>
+    <color name="md_theme_primaryFixedDim">#FFB3B4</color>
+    <color name="md_theme_onPrimaryFixedVariant">#733337</color>
+    <color name="md_theme_secondaryFixed">#FFDADA</color>
+    <color name="md_theme_onSecondaryFixed">#2C1516</color>
+    <color name="md_theme_secondaryFixedDim">#E6BDBD</color>
+    <color name="md_theme_onSecondaryFixedVariant">#5D3F40</color>
+    <color name="md_theme_tertiaryFixed">#FFDDB0</color>
+    <color name="md_theme_onTertiaryFixed">#281800</color>
+    <color name="md_theme_tertiaryFixedDim">#E6C18D</color>
+    <color name="md_theme_onTertiaryFixedVariant">#5B421A</color>
+    <color name="md_theme_surfaceDim">#E8D6D6</color>
+    <color name="md_theme_surfaceBright">#FFF8F7</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#FFF0F0</color>
+    <color name="md_theme_surfaceContainer">#FCEAE9</color>
+    <color name="md_theme_surfaceContainerHigh">#F6E4E4</color>
+    <color name="md_theme_surfaceContainerHighest">#F0DEDE</color>
 
 </resources>
