--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="AppTheme.DayNight">
+    <style name="AppTheme" parent="BaseTheme">
         <!-- Transparent system bars for edge-to-edge. -->
         <item name="android:navigationBarColor">?attr/colorSurface</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
