--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,4 +33,26 @@
         <item>dark</item>
         <item>follow_system</item>
     </string-array>
+
+    <string-array name="double_tap_seek_entries">
+        <item>@string/disabled</item>
+        <item>3 секунди</item>
+        <item>5 секунд</item>
+        <item>10 секунд</item>
+        <item>15 секунд</item>
+        <item>30 секунд</item>
+        <item>60 секунд</item>
+        <item>120 секунд</item>
+    </string-array>
+
+    <string-array name="double_tap_seek_values">
+        <item>off</item>
+        <item>3</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>120</item>
+    </string-array>
 </resources>
