--- a/app/src/main/res/layout/fragment_screenshots.xml
+++ b/app/src/main/res/layout/fragment_screenshots.xml
@@ -3,5 +3,4 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/view_pager_2"
-    android:background="@color/black" />
+    android:id="@+id/view_pager_2" />
