--- a/app/src/main/res/layout/item_screenshot_big.xml
+++ b/app/src/main/res/layout/item_screenshot_big.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_height="match_parent"
-	android:layout_width="match_parent"
-	android:background="@color/black"
-	android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
-	<com.ortiz.touchview.TouchImageView
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:layout_centerInParent="true"
-		android:id="@+id/tiv_screenshot" />
+    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
+        android:id="@+id/tiv_screenshot"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        tools:src="@drawable/image_hello" />
 
-	<com.google.android.material.progressindicator.CircularProgressIndicator
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:layout_centerInParent="true"
-		android:indeterminate="true"
-		app:indicatorSize="40dp"
-		app:trackThickness="20dp"
-		android:id="@+id/progress_indicator" />
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progress_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        app:indicatorSize="40dp"
+        app:trackThickness="20dp"
+        tools:visibility="visible" />
 
 </RelativeLayout>
