--- a/app/src/main/res/layout/layout_trailer_video.xml
+++ b/app/src/main/res/layout/layout_trailer_video.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_video"
     android:layout_width="fill_parent"
-    android:visibility="gone"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/ll_video">
+    android:visibility="gone"
+    tools:visibility="visible">
+
     <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:padding="10dp"
         style="@style/LayoutHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="@string/trailer" />
 
     <include
-        android:layout_gravity="center"
         android:id="@+id/item_trailer"
-        layout="@layout/item_screenshot" />
+        layout="@layout/item_trailer" />
 
 </LinearLayout>
